# WebRTCTransformer

./: .gitignore  Dockerfile  README.md  Running WebRTC Setup.docx  WebRTC_RUN  send.html
scripts/: testing
transform_plugin/: CMakeLists.txt
transform_plugin/objectdetect/: pgie_detectnet_v2_tlt_config.txt
transform_plugin/src/: CMakeLists.txt  gstc264depay.c  gstc264depay.h  gstdoherh264depay.c  gstdoherh264depay.h  gstidrinsert.c  gstidrinsert.h  gstmpeg4filter.c  gstmpeg4filter.h  gstremovesei.c  gstremovesei.h  gstrtpextention.c  gstrtpextention.h  gsttimestamp.c  gsttimestamp.h  klv_mux.c  webrtc.c  webrtc.h  webrtc_recv.c  webrtc_send.c
transform_plugin/test/: CMakeLists.txt  rtp_generator.c
video/: videoreadme
